feat: header structure and styles done

--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
 </head>
 <body>
     <header>
-        <h1>henrique <span>dev</span></h1>
-        <nav>
-            <ul>
-                <li><a href="#sobre"></a></li>
-                <li><a href="#portfolio"></a></li>
-                <li><a href="#contato"></a></li>
-                <li><a href="#skills"></a></li>
-            </ul>
-        </nav>
-        <a href="#">Orçamento</a>
+        <div class="headersize">
+            <h1 id="title">henrique<span>dev</span></h1>
+            <nav>
+                <ul>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#portfolio">Portfólio</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                </ul>
+            </nav>
+            <a href="#">Orçamento</a>
+        </div>
     </header>
 
     <section>
@@ -46,6 +48,6 @@
 
     </footer>
 
-    <script src="/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
