--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Henrique [Desenvolvedor Front-end]</title>
+    <title>Henrique —————</title>
     <!--CSS -->
     <link rel="stylesheet" href="./styles/styles.css">
     <!--FONT AWESOME-->
@@ -19,15 +19,34 @@
             <h1 id="title">henrique<span>dev</span></h1>
             <nav>
                 <ul>
-                    <li><a href="#sobre">Sobre</a></li>
-                    <li><a href="#portfolio">Portfólio</a></li>
-                    <li><a href="#contato">Contato</a></li>
-                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#sobre">< Sobre/></Sobre></a></li>
+                    <li><a href="#portfolio">< Portfólio/></a></li>
+                    <li><a href="#contato">< Contato/></a></li>
+                    <li><a href="#skills">< Skills/></a></li>
                 </ul>
             </nav>
-            <a href="#">Orçamento</a>
+            <div class="menuhamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </header>
+
+    <main>
+        <div class="mainsize">
+            <div class="textmain">
+                <h1>Construa o Futuro Digital.</h1>
+                <h1>Tenha um site profissional.</h1>
+                <p>Auxilio empresas a desenvolverem produtos digitais modernos e de alta qualidade. Design, Desenvolvimento Front-end e habilidade profissional para destacar seu produto no mercado.</p>
+                <a class="seeportfolio" href="#portfolio">Ver trabalhos</a>
+            </div>
+            <div class="imgmain">
+                <img class="myphoto" src="./assets/photomine.jpg" alt="">
+                <img class="textcircle" src="/assets/textcircle.png" alt="Texto circulando">
+            </div>
+        </div>
+    </main>
 
     <section>
         <div id="sobre">
