feat: projects with img and link done

--- a/index.html
+++ b/index.html
@@ -54,7 +54,60 @@
 
         </div>
         <div id="projetos">
-            
+            <h1>Projetos</h1>
+            <div class="containerprojects">
+                <div class="projeto">
+                    <a href="https://dsmconsultoria.vercel.app/" target="_blank">
+                        <div class="photoprojeto">
+                            <img class="imgprincipalprojeto" src="./assets/testdsm.jpg" alt="">
+                            <img class="imgprincipalprojetohover" src="./assets/dsmscreen.jpg" alt="">
+                        </div>
+                    </a>
+                    <div class="textprojeto">
+                        <h3>DSM Consultoria</h3>
+                        <a href="https://dsmconsultoria.vercel.app/" target="_blank">Ver o site</a>
+                    </div>
+                </div>
+
+                <div class="projeto">
+                    <a href="https://rexpeita-ecommerce.netlify.app/index.html" target="_blank">
+                        <div class="photoprojeto">
+                            <img class="imgprincipalprojeto" src="./assets/testrx.jpg" alt="">
+                            <img class="imgprincipalprojetohover" src="./assets/rxscreen.jpg" alt="">
+                        </div>
+                    </a>
+                    <div class="textprojeto">
+                        <h3>Rexpeita</h3>
+                        <a href="https://rexpeita-ecommerce.netlify.app/index.html" target="_blank">Ver o site</a>
+                    </div>
+                </div>
+
+                <div class="projeto">
+                    <a href="https://app-order-food.vercel.app/" target="_blank">
+                        <div class="photoprojeto">
+                            <img class="imgprincipalprojeto" src="./assets/testjapa.jpg" alt="">
+                            <img class="imgprincipalprojetohover" src="./assets/japascreen.jpg" alt="">
+                        </div>
+                    </a>
+                    <div class="textprojeto">
+                        <h3>Japapou</h3>
+                        <a href="https://app-order-food.vercel.app/" target="_blank">Ver o site</a>
+                    </div>
+                </div>
+
+                <div class="projeto">
+                    <a href="https://real-estate-omega-nine.vercel.app/" target="_blank">
+                        <div class="photoprojeto">
+                            <img class="imgprincipalprojeto" src="./assets/testreal.jpg" alt="">
+                            <img class="imgprincipalprojetohover" src="./assets/realestate.jpg" alt="">
+                        </div>
+                    </a>
+                    <div class="textprojeto">
+                        <h3>Real Estate</h3>
+                        <a href="https://real-estate-omega-nine.vercel.app/" target="_blank">Ver o site</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="contato">
             <div class="container-form">
