feat: skills and description with the animation tabcontent

--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
         </div>
     </main>
 
+    <div class="back-to-top" id="backToTop">&#9650;</div>
+
     <section>
         <div id="sobre">
 
         </div>
+
         <div id="projetos">
             <h1>Projetos</h1>
             <div class="containerprojects">
@@ -109,6 +112,61 @@
                 </div>
             </div>
         </div>
+
+        <div id="skills">
+            <h1>Habilidades</h1>
+            <div class="containerskills">
+                <div class="containercontentlanguage">
+                    <p class="contentlanguage ativo">O React é uma biblioteca front-end JavaScript de código aberto com foco em criar interfaces de usuário em páginas web</p>
+                    <p class="contentlanguage">TypeScript é uma linguagem de programação de código aberto desenvolvida pela Microsoft. É um superconjunto sintático estrito de JavaScript e adiciona tipagem estática opcional à linguagem.</p>
+                    <p class="contentlanguage">JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma. Juntamente com HTML e CSS, o JavaScript é uma das três principais tecnologias da World Wide Web.</p>
+                    <p class="contentlanguage">Styled Components é uma biblioteca feita para React e React Native. Ela utiliza uma mistura de CSS e Javascript usando uma técnica chamada CSS-in-JS.</p>
+                    <p class="contentlanguage">Sass é uma linguagem de folhas de estilo concebida inicialmente por Hampton Catlin e desenvolvida por Natalie Weizenbaum. Depois de suas versões iniciais, Weizenbaum e Chris Eppstein continuaram a estender Sass com SassScript, uma simples linguagem de script usada em arquivos Sass.</p>
+                    <p class="contentlanguage">Tailwind CSS é uma estrutura CSS de código aberto. A principal característica desta biblioteca é que, ao contrário de outros frameworks CSS como o Bootstrap, ela não fornece uma série de classes predefinidas para elementos como botões ou tabelas.</p>
+                    <p class="contentlanguage">Angular é uma plataforma de aplicações web de código-fonte aberto e front-end baseado em TypeScript liderado pela Equipe Angular do Google e por uma comunidade de indivíduos e corporações. Angular é uma reescrita completa do AngularJS, feito pela mesma equipe que o construiu.</p>
+                    <p class="contentlanguage">É uma linguagem de domínio específico desenvolvida para gerenciar dados relacionais em um sistema de gerenciamento de banco de dados, ou para processamento de fluxo de dados em um sistema de gerenciamento de fluxo de dados.</p>
+                    <p class="contentlanguage">Bootstrap é um framework web com código-fonte aberto para desenvolvimento de componentes de interface e front-end para sites e aplicações web, usando HTML, CSS e JavaScript, baseado em modelos de design para a tipografia, melhorando a experiência do usuário em um site amigável e responsivo.</p>
+                    <p class="contentlanguage">Cascading Style Sheets é um mecanismo para adicionar estilos a uma página web, aplicado diretamente nas tags HTML ou ficar contido dentro das tags. Também é possível, adicionar estilos adicionando um link para um arquivo CSS que contém os estilos.</p>
+                    <p class="contentlanguage">HTML é uma linguagem de marcação utilizada na construção de páginas na Web. Documentos HTML podem ser interpretados por navegadores. A tecnologia é fruto da junção entre os padrões HyTime e SGML. HyTime é um padrão para a representação estruturada de hipermídia e conteúdo baseado em tempo</p>
+                </div>
+                <div class="imagelanguages">
+                    <div class="menulanguage ativo">
+                        <img src="./assets/skills/react.png" alt="Angular">
+                    </div>
+                    <div class="menulanguage">
+                        <img src="./assets/skills/typescript.png" alt="Typescript">
+                    </div>
+                    <div class="menulanguage">
+                        <img src="./assets/skills/javascript.png" alt="JavaScript">
+                    </div>
+                    <div class="menulanguage">
+                        <img src="./assets/skills/styledcomponents.png" alt="Styled Components">
+                    </div>
+                    <div class="menulanguage">
+                        <img src="./assets/skills/sass.png" alt="Sass">    
+                    </div>
+                    <div class="menulanguage">
+                        <img src="./assets/skills/tailwind.png" alt="Tailwind">    
+                    </div>
+                    <div class="menulanguage">
+                        <img src="./assets/skills/angular.png" alt="Angular">    
+                    </div>
+                    <div class="menulanguage">
+                        <img src="./assets/skills/sql.png" alt="SQL">    
+                    </div>
+                    <div class="menulanguage">
+                        <img src="./assets/skills/bootstrap.png" alt="Bootstrap">    
+                    </div>
+                    <div class="menulanguage">
+                        <img src="./assets/skills/css.png" alt="CSS">    
+                    </div>
+                    <div class="menulanguage">
+                        <img src="./assets/skills/html.png" alt="HTML">    
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div id="contato">
             <div class="container-form">
                 <h1>Mande uma mensagem!</h1>
@@ -143,9 +201,7 @@
                 </form>
               </div>
         </div>
-        <div id="skills">
-            
-        </div>
+
     </section>
 
     <footer>
