feat: menu hamburger opening and closing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Henrique —————</title>
-    <link rel="icon" href="/assets/icon.png">
+    <link rel="icon" href="./assets/icon.png">
     <!--CSS -->
     <link rel="stylesheet" href="./styles/styles.css">
     <!--FONT AWESOME-->
@@ -20,19 +20,22 @@
             <h1 id="title">henrique<span>dev</span></h1>
             <nav>
                 <ul>
-                    <li><a href="#sobre">< Sobre/></Sobre></a></li>
-                    <li><a href="#projetos">< Projetos/></a></li>
-                    <li><a href="#contato">< Contato/></a></li>
-                    <li><a href="#skills">< Skills/></a></li>
+                    <li><a class="linkheader" href="#sobre">< Sobre/></Sobre></a></li>
+                    <li><a class="linkheader" href="#projetos">< Projetos/></a></li>
+                    <li><a class="linkheader" href="#contato">< Contato/></a></li>
+                    <li><a class="linkheader" href="#skills">< Skills/></a></li>
                 </ul>
             </nav>
             <div class="menuhamburger">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
             </div>
         </div>
     </header>
+
+    <div class="mobileMenuContent">
+    </div>
 
     <main>
         <div class="mainsize">
