feat: change all structure

--- a/index.html
+++ b/index.html
@@ -18,14 +18,7 @@
     <header>
         <div class="headersize">
             <h1 id="title">henrique<span>dev</span></h1>
-            <nav>
-                <ul>
-                    <li><a class="linkheader" href="#sobre">< Sobre/></Sobre></a></li>
-                    <li><a class="linkheader" href="#projetos">< Projetos/></a></li>
-                    <li><a class="linkheader" href="#contato">< Contato/></a></li>
-                    <li><a class="linkheader" href="#skills">< Skills/></a></li>
-                </ul>
-            </nav>
+            
             <div class="menuhamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -40,13 +33,11 @@
     <main>
         <div class="mainsize">
             <div class="textmain">
-                <h1>Construa o Futuro Digital.</h1>
-                <h1>Tenha um site profissional.</h1>
+                <h1>Desenvolvedor Front-end <span>&</span></h1>
+                <h1>Desenvolvedor Web</h1>
+                <h2>Construa o Futuro Digital. Tenha um site profissional.</h2>
                 <p>Auxilio empresas a desenvolverem produtos digitais modernos e de alta qualidade. Design, Desenvolvimento Front-end e habilidade profissional para destacar seu produto no mercado.</p>
                 <a class="seeprojetos" href="#projetos">Ver trabalhos</a>
-            </div>
-            <div class="imgmain">
-                <img class="myphoto" src="./assets/photomine.jpg" alt="">
                 <img class="textcircle" src="/assets/textcircle.png" alt="Texto circulando">
             </div>
         </div>
@@ -61,6 +52,7 @@
 
         <div id="projetos">
             <h1>Projetos</h1>
+            <div class="linebreak"></div>
             <div class="containerprojects">
                 <div class="projeto">
                     <a href="https://dsmconsultoria.vercel.app/" target="_blank">
