feat: new header

--- a/index.html
+++ b/index.html
@@ -17,8 +17,20 @@
 <body>
     <header>
         <div class="headersize">
-            <h1 id="title">henrique<span>dev</span></h1>
-            
+            <div id="title">
+                <h1>Henrique Pinheiro</h1>
+                <div class="profile">
+                  <h3 href="#" data-replace="Freelancer"><span>Desenvolvedor Front-end</span></h3>
+                </div>
+              </div>
+            <nav>
+                <ul>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#projetos">Projetos</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                </ul>
+            </nav>
             <div class="menuhamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
