feat: new colors and new header

--- a/index.html
+++ b/index.html
@@ -17,26 +17,28 @@
 <body>
     <header>
         <div class="headersize">
-            <div id="title">
-                <h1>Henrique Pinheiro</h1>
-                <div class="profile">
-                  <h3 href="#" data-replace="Freelancer"><span>Desenvolvedor Front-end</span></h3>
+            <div class="titleprofile">
+                <h1>H</h1>
+                <div id="title">
+                    <h1>Henrique Pinheiro</h1>
+                    <div class="profile">
+                    <h3 href="#" data-replace="Freelancer"><span>Desenvolvedor Front-end</span></h3>
+                    </div>
                 </div>
-              </div>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#sobre">Sobre</a></li>
-                    <li><a href="#projetos">Projetos</a></li>
-                    <li><a href="#contato">Contato</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                </ul>
-            </nav>
+            </div>
             <div class="menuhamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
-                <span class="bar"></span>
             </div>
+            <nav>
+                <ul>
+                    <li><a href="#home">1. Home</a></li>
+                    <li><a href="#sobre">2. Sobre</a></li>
+                    <li><a href="#projetos">3. Projetos</a></li>
+                    <li><a href="#contato">4. Contato</a></li>
+                    <li><a href="#skills">5. Skills</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
@@ -46,11 +48,13 @@
     <main>
         <div class="mainsize">
             <div class="textmain">
-                <h1>Desenvolvedor Front-end <span>&</span></h1>
-                <h1>Desenvolvedor Web</h1>
-                <h2>Construa o Futuro Digital. Tenha um site profissional.</h2>
+                <h1>Construa o Futuro Digital.</h1>
+                <h1>Tenha um site profissional.</h1>
                 <p>Auxilio empresas a desenvolverem produtos digitais modernos e de alta qualidade. Design, Desenvolvimento Front-end e habilidade profissional para destacar seu produto no mercado.</p>
-                <a class="seeprojetos" href="#projetos">Ver trabalhos</a>
+                <div class="divmain">
+                    <a class="seeprojetos" href="#projetos">Ver trabalhos</a>
+                    <a href="#contato">Contato ↗</a>
+                </div>
                 <img class="textcircle" src="/assets/textcircle.png" alt="Texto circulando">
             </div>
         </div>
@@ -120,6 +124,25 @@
                 </div>
             </div>
         </div>
+
+        <section class="partners">
+            <div class="scroller" data-direction="left" data-speed="fast">
+                <div class="scroller__inner">
+                  <img src="./assets/skills/angular.png" alt="" />
+                  <img src="./assets/skills/react.png" alt="" />
+                  <img src="./assets/skills/typescript.png" alt="" />
+                  <img src="./assets/skills/javascript.png" alt="" />
+                  <img src="./assets/skills/nodejs.png" alt="" />
+                  <img src="./assets/skills/tailwind.png" alt="" />
+                  <img src="./assets/skills/styledcomponents.png" alt="" />
+                  <img src="./assets/skills/sass.png" alt="" />
+                  <img src="./assets/skills/bootstrap.png" alt="" />
+                  <img src="./assets/skills/html.png" alt="" />
+                  <img src="./assets/skills/css.png" alt="" />
+                  <img src="./assets/skills/sql.png" alt="" />
+                </div>
+              </div>
+        </section>
 
         <div id="skills">
             <h1>Habilidades</h1>
