feat: header and background-image linkl

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Henrique —————</title>
+    <title>Henrique —— Front-end Developer</title>
     <link rel="icon" href="./assets/icon.png">
     <!--CSS -->
     <link rel="stylesheet" href="./styles/styles.css">
@@ -30,15 +30,15 @@
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="#home">1. Home</a></li>
-                    <li><a href="#sobre">2. Sobre</a></li>
-                    <li><a href="#projetos">3. Projetos</a></li>
-                    <li><a href="#contato">4. Contato</a></li>
-                    <li><a href="#skills">5. Skills</a></li>
-                </ul>
-            </nav>
+            <div class="linksheader">
+                <div class="disponiveltowork">
+                    <span class="disponivel"></span>
+                    <p>Disponível</p>
+                </div>
+                <span class="block">——</span>
+                <a href="#" target="_blank"><i class="fa-brands fa-linkedin fa-lg" style="color: #e6e6e6;"></i></a>
+                <a href="#" target="_blank"><i class="fa-brands fa-github fa-lg" style="color: #e6e6e6;"></i></a>
+            </div>
         </div>
     </header>
 
