feat: menu content when active

--- a/index.html
+++ b/index.html
@@ -38,6 +38,43 @@
     </header>
 
     <div class="mobileMenuContent">
+        <div class="divisorcontent">
+            <div class="menubg">
+                <div class="contact">
+                  <div class="namecelemail">
+                    <h1>Henrique Pinheiro</h1>
+                    <div class="iconlink">
+                      <i class="fa-solid fa-envelope" style="color: #000000;"></i>
+                      <a href="#">henriquepinheiroxavier@gmail.com</a>
+                    </div>
+                  </div>
+                  <div class="socialmedia">
+                    <a href="#" target="_blank" class="underline">
+                      <span>LinkedIn</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
+                    </a>
+                    <a href="#" target="_blank" class="underline">
+                      <span>Github</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
+                    </a>
+                    <a href="#" target="_blank" class="underline">
+                      <span>Whatsapp</span><svg viewBox="0 0 13 20"><polyline points="0.5 19.5 3 19.5 12.5 10 3 0.5" /></svg>
+                    </a>
+                  </div>
+                </div>
+            
+                <div class="info">
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit tempora aliquid maxime perspiciatis fugiat corrupti explicabo suscipit aliquam qui debitis quaerat dicta dolore deleniti accusantium minima, voluptate illo quae voluptas corporis ratione architecto non? Officiis, sunt soluta et consequatur architecto dolores autem optio maxime itaque praesentium illum in ratione excepturi tempora quisquam repudiandae saepe porro placeat! Quas, unde. Nulla ea quas dolor a ullam tempore at, cumque consequuntur neque vel temporibus culpa repellat voluptas.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit tempora aliquid maxime perspiciatis fugiat corrupti explicabo suscipit aliquam qui debitis quaerat dicta dolore deleniti accusantium minima, voluptate illo quae voluptas corporis ratione architecto non? Officiis, sunt soluta et consequatur architecto dolores autem optio maxime itaque praesentium illum in ratione excepturi tempora quisquam repudiandae saepe porro placeat! Quas, unde. Nulla ea quas dolor a ullam tempore at, cumque consequuntur neque vel temporibus culpa repellat voluptas.</p>
+                </div>
+              </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Projetos</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Habilidades</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
 
     <main>
