--- a/index.html
+++ b/index.html
@@ -39,10 +39,18 @@
 
     <div class="mobileMenuContent">
         <div class="divisorcontent">
+            <nav>
+                <ul>
+                    <li><a href="#">Projetos</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Habilidades</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
             <div class="menubg">
                 <div class="contact">
                   <div class="namecelemail">
-                    <h1>Henrique Pinheiro</h1>
+                    <h1>Desenvolvedor Front-end & Desenvolvedor Web</h1>
                     <div class="iconlink">
                       <i class="fa-solid fa-envelope" style="color: #000000;"></i>
                       <a href="#">henriquepinheiroxavier@gmail.com</a>
@@ -66,14 +74,6 @@
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit tempora aliquid maxime perspiciatis fugiat corrupti explicabo suscipit aliquam qui debitis quaerat dicta dolore deleniti accusantium minima, voluptate illo quae voluptas corporis ratione architecto non? Officiis, sunt soluta et consequatur architecto dolores autem optio maxime itaque praesentium illum in ratione excepturi tempora quisquam repudiandae saepe porro placeat! Quas, unde. Nulla ea quas dolor a ullam tempore at, cumque consequuntur neque vel temporibus culpa repellat voluptas.</p>
                 </div>
               </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Projetos</a></li>
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Habilidades</a></li>
-                    <li><a href="#">Contato</a></li>
-                </ul>
-            </nav>
         </div>
     </div>
 
@@ -87,7 +87,7 @@
                     <a class="seeprojetos" href="#projetos">Ver trabalhos</a>
                     <a href="#contato">Contato ↗</a>
                 </div>
-                <img class="textcircle" src="/assets/textcircle.png" alt="Texto circulando">
+                <img class="textcircle" src="/assets/textcirclewhite.png" alt="Texto circulando">
             </div>
         </div>
     </main>
@@ -115,7 +115,7 @@
                         <a href="https://dsmconsultoria.vercel.app/" target="_blank">Ver o site</a>
                     </div>
                 </div>
-
+                <!--
                 <div class="projeto">
                     <a href="https://rexpeita-ecommerce.netlify.app/index.html" target="_blank">
                         <div class="photoprojeto">
@@ -154,6 +154,8 @@
                         <a href="https://real-estate-omega-nine.vercel.app/" target="_blank">Ver o site</a>
                     </div>
                 </div>
+
+            -->
             </div>
         </div>
 
