--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--FONT GOOGLE-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;700;800;900&family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -89,12 +89,18 @@
 
     <div class="back-to-top" id="backToTop">&#9650;</div>
 
-    <section>
-        <div id="sobre">
-
+    <section id="sobre">
+        <div class="textsobre sectionanima">
+            <h1>Sobre mim</h1>
+            <p>Carioca, 21 anos e imerço no mundo da tecnologia.</p>
+            <p>Jovem desenvolvedor especializado na construção de experiências digitais excepcionais. Com proficiência nos frameworks mais utilizados pra Web, tenho foco em transformar ideias em realidade, criando interfaces intuitivas e atraentes.</p>
+            <p>Graduando em Análise e Desenvolvimento de Sistemas.</p>
+            <p>Navegue pelo meu portfólio para descobrir os projetos que tenho orgulho de ter contribuído. Estou comprometido em demonstrar como minha paixão pelo desenvolvimento Front-end se traduz em resultados concretos. E caso queira ter esse Desenvolvedor Front-end na sua equipe ou realizar um trabalho Freelancer, basta entrar em contato e vamos ao trabalho.</p>
+            <img src="./assets/eu.jpg" class="myphoto" alt="Imagem minha">
         </div>
+    </section>
 
-        <div id="projetos">
+    <section id="projetos">
             <h1>Projetos</h1>
             <div class="linebreak"></div>
             <div class="containerprojects">
@@ -152,9 +158,9 @@
 
             -->
             </div>
-        </div>
+    </section>
 
-        <section class="partners">
+    <section class="partners">
             <div class="scroller" data-direction="left" data-speed="fast">
                 <div class="scroller__inner">
                   <img src="./assets/skills/angular.png" alt="" />
@@ -171,9 +177,9 @@
                   <img src="./assets/skills/sql.png" alt="" />
                 </div>
               </div>
-        </section>
+    </section>
 
-        <div id="skills">
+    <section id="skills">
             <h1>Habilidades</h1>
             <div class="containerskills">
                 <div class="containercontentlanguage">
@@ -225,9 +231,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+    </section>
 
-        <div id="contato">
+    <section id="contato">
             <div class="container-form">
                 <h1>Mande uma mensagem!</h1>
                 <form class="form-style" id="form">
@@ -260,9 +266,8 @@
                   <button class="button-submit-form" type="submit">Send</button>
                 </form>
               </div>
-        </div>
-
     </section>
+
 
     <footer>
 
