--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
             <p>Jovem desenvolvedor especializado na construção de experiências digitais excepcionais. Com proficiência nos frameworks mais utilizados pra Web, tenho foco em transformar ideias em realidade, criando interfaces intuitivas e atraentes.</p>
             <p>Graduando em Análise e Desenvolvimento de Sistemas.</p>
             <p>Navegue pelo meu portfólio para descobrir os projetos que tenho orgulho de ter contribuído. Estou comprometido em demonstrar como minha paixão pelo desenvolvimento Front-end se traduz em resultados concretos. E caso queira ter esse Desenvolvedor Front-end na sua equipe ou realizar um trabalho Freelancer, basta entrar em contato e vamos ao trabalho.</p>
+            <div class="arrowtoinfo">
+                <i class="fa-solid fa-arrow-turn-up fa-xl arrow" style="color: #ffffff;"></i>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, perferendis?</p>
+            </div>
             <img src="./assets/eu.jpg" class="myphoto" alt="Imagem minha">
         </div>
     </section>
