feat: projects section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <section id="sobre">
         <div class="textsobre sectionanima">
-            <h1>Sobre mim</h1>
+            <h1>[Sobre mim]</h1>
             <p>Carioca, 21 anos e imerço no mundo da tecnologia.</p>
             <p>Jovem desenvolvedor especializado na construção de experiências digitais excepcionais. Com proficiência nos frameworks mais utilizados pra Web, tenho foco em transformar ideias em realidade, criando interfaces intuitivas e atraentes.</p>
             <p>Graduando em Análise e Desenvolvimento de Sistemas.</p>
@@ -105,7 +105,8 @@
     </section>
 
     <section id="projetos">
-            <h1>Projetos</h1>
+        <div class="textproject sectionanima">
+            <h1>[Projetos]</h1>
             <div class="linebreak"></div>
             <div class="containerprojects">
                 <div class="projeto">
@@ -115,53 +116,102 @@
                             <img class="imgprincipalprojetohover" src="./assets/dsmscreen.jpg" alt="">
                         </div>
                     </a>
-                    <div class="textprojeto">
-                        <h3>DSM Consultoria</h3>
-                        <a href="https://dsmconsultoria.vercel.app/" target="_blank">Ver o site</a>
-                    </div>
-                </div>
-                <!--
-                <div class="projeto">
-                    <a href="https://rexpeita-ecommerce.netlify.app/index.html" target="_blank">
-                        <div class="photoprojeto">
-                            <img class="imgprincipalprojeto" src="./assets/testrx.jpg" alt="">
-                            <img class="imgprincipalprojetohover" src="./assets/rxscreen.jpg" alt="">
+                    <div class="contentimg">
+                        <i class="fa-solid fa-chevron-left fa-lg" style="color: #ffffff;"></i>
+                        <div class="menutabsimgs">
+                            <span></span>
+                            <span></span>
+                            <span></span>
                         </div>
-                    </a>
-                    <div class="textprojeto">
-                        <h3>Rexpeita</h3>
-                        <a href="https://rexpeita-ecommerce.netlify.app/index.html" target="_blank">Ver o site</a>
+                        <i class="fa-solid fa-chevron-right fa-lg" style="color: #ffffff;"></i>
+                    </div>
+                    <div class="infosprojeto">
+                        <div class="linkstoprojects">
+                            <h3>DSM Consultoria</h3>
+                            <a class="repositorylink" href="https://dsmconsultoria.vercel.app/" target="_blank">
+                                <p>Ver o site</p>
+                                <i class="fa-solid fa-arrow-up-right-from-square fa-xl" style="color: #ffffff;"></i>
+                            </a>
+                            <a class="repositorylink" href="#" target="_blank">
+                                <p>Repositório</p>
+                                <i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i>
+                            </a>
+                        </div>
+                        <div class="descriptionprojects">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, eveniet quod aperiam recusandae eaque expedita cum consequatur laudantium ullam nisi.</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="projeto">
-                    <a href="https://app-order-food.vercel.app/" target="_blank">
+                    <a href="https://dsmconsultoria.vercel.app/" target="_blank">
                         <div class="photoprojeto">
                             <img class="imgprincipalprojeto" src="./assets/testjapa.jpg" alt="">
                             <img class="imgprincipalprojetohover" src="./assets/japascreen.jpg" alt="">
                         </div>
                     </a>
-                    <div class="textprojeto">
-                        <h3>Japapou</h3>
-                        <a href="https://app-order-food.vercel.app/" target="_blank">Ver o site</a>
+                    <div class="contentimg">
+                        <i class="fa-solid fa-chevron-left fa-lg" style="color: #ffffff;"></i>
+                        <div class="menutabsimgs">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <i class="fa-solid fa-chevron-right fa-lg" style="color: #ffffff;"></i>
+                    </div>
+                    <div class="infosprojeto">
+                        <div class="linkstoprojects">
+                            <h3>DSM Consultoria</h3>
+                            <a class="repositorylink" href="https://dsmconsultoria.vercel.app/" target="_blank">
+                                <p>Ver o site</p>
+                                <i class="fa-solid fa-arrow-up-right-from-square fa-xl" style="color: #ffffff;"></i>
+                            </a>
+                            <a class="repositorylink" href="#" target="_blank">
+                                <p>Repositório</p>
+                                <i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i>
+                            </a>
+                        </div>
+                        <div class="descriptionprojects">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, eveniet quod aperiam recusandae eaque expedita cum consequatur laudantium ullam nisi.</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="projeto">
-                    <a href="https://real-estate-omega-nine.vercel.app/" target="_blank">
+                    <a href="https://dsmconsultoria.vercel.app/" target="_blank">
                         <div class="photoprojeto">
                             <img class="imgprincipalprojeto" src="./assets/testreal.jpg" alt="">
                             <img class="imgprincipalprojetohover" src="./assets/realestate.jpg" alt="">
                         </div>
                     </a>
-                    <div class="textprojeto">
-                        <h3>Real Estate</h3>
-                        <a href="https://real-estate-omega-nine.vercel.app/" target="_blank">Ver o site</a>
+                    <div class="contentimg">
+                        <i class="fa-solid fa-chevron-left fa-lg" style="color: #ffffff;"></i>
+                        <div class="menutabsimgs">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <i class="fa-solid fa-chevron-right fa-lg" style="color: #ffffff;"></i>
+                    </div>
+                    <div class="infosprojeto">
+                        <div class="linkstoprojects">
+                            <h3>DSM Consultoria</h3>
+                            <a class="repositorylink" href="https://dsmconsultoria.vercel.app/" target="_blank">
+                                <p>Ver o site</p>
+                                <i class="fa-solid fa-arrow-up-right-from-square fa-xl" style="color: #ffffff;"></i>
+                            </a>
+                            <a class="repositorylink" href="#" target="_blank">
+                                <p>Repositório</p>
+                                <i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i>
+                            </a>
+                        </div>
+                        <div class="descriptionprojects">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, eveniet quod aperiam recusandae eaque expedita cum consequatur laudantium ullam nisi.</p>
+                        </div>
                     </div>
                 </div>
-
-            -->
             </div>
+        </div>
     </section>
 
     <section class="partners">
