feat: adjusts color and animation

--- a/index.html
+++ b/index.html
@@ -214,27 +214,9 @@
         </div>
     </section>
 
-    <section class="partners">
-            <div class="scroller" data-direction="left" data-speed="fast">
-                <div class="scroller__inner">
-                  <img src="./assets/skills/angular.png" alt="" />
-                  <img src="./assets/skills/react.png" alt="" />
-                  <img src="./assets/skills/typescript.png" alt="" />
-                  <img src="./assets/skills/javascript.png" alt="" />
-                  <img src="./assets/skills/nodejs.png" alt="" />
-                  <img src="./assets/skills/tailwind.png" alt="" />
-                  <img src="./assets/skills/styledcomponents.png" alt="" />
-                  <img src="./assets/skills/sass.png" alt="" />
-                  <img src="./assets/skills/bootstrap.png" alt="" />
-                  <img src="./assets/skills/html.png" alt="" />
-                  <img src="./assets/skills/css.png" alt="" />
-                  <img src="./assets/skills/sql.png" alt="" />
-                </div>
-              </div>
-    </section>
-
     <section id="skills">
-            <h1>Habilidades</h1>
+        <div class="textskill">
+            <h1>[Habilidades]</h1>
             <div class="containerskills">
                 <div class="containercontentlanguage">
                     <p class="contentlanguage ativo">O React é uma biblioteca front-end JavaScript de código aberto com foco em criar interfaces de usuário em páginas web</p>
@@ -285,10 +267,14 @@
                     </div>
                 </div>
             </div>
+        </div>    
     </section>
 
     <section id="contato">
-            <div class="container-form">
+        <div class="sobrecontato">
+            <h1>[Contato]</h1>
+        </div>
+        <div class="container-form">
                 <h1>Mande uma mensagem!</h1>
                 <form class="form-style" id="form">
                     <div class="name-email">
@@ -319,12 +305,10 @@
                   </div>
                   <button class="button-submit-form" type="submit">Send</button>
                 </form>
-              </div>
+        </div>
     </section>
 
-
     <footer>
-
     </footer>
 
     <script src="./main.js"></script>
