feat: adjusts to size

--- a/index.html
+++ b/index.html
@@ -271,11 +271,12 @@
     </section>
 
     <section id="contato">
-        <div class="sobrecontato">
-            <h1>[Contato]</h1>
-        </div>
-        <div class="container-form">
-                <h1>Mande uma mensagem!</h1>
+        <div class="contactsize">
+            <div class="sobrecontato">
+                <h1>[Contato]</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime pariatur recusandae enim accusantium. Ipsa fugiat doloribus quod vero? Ut incidunt doloribus ex quod molestiae neque quam natus odio dolor aliquid!</p>
+            </div>
+            <div class="container-form">
                 <form class="form-style" id="form">
                     <div class="name-email">
                         <div class="every-input">
@@ -305,7 +306,8 @@
                   </div>
                   <button class="button-submit-form" type="submit">Send</button>
                 </form>
-        </div>
+            </div>
+        </div>    
     </section>
 
     <footer>
